src/main/java/com/sample/credentials/common/config/rest/errors/ApiSubError.java

package com.sample.credentials.common.config.rest.errors;

/**
 * Interface ApiSubError 
 * Sous erreurs d'API.
 */
public interface ApiSubError
{

}
